--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
   <meta name="viewport" content="width=device-width">
   <title>To-do-list</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+  <div style="position:absolute">
+    <i id="baricon" style="font-size:30px;" class="fa fa-bars"></i>
+    <span style="font-size:25px; padding-left:10px;"><strong>More Games and Projects</strong></span>
+  </div>
+  <div id="showproj" style="display:none;">
+    <i id="bariconsec"style="font-size:30px"class="fa fa-bars"></i>
+    <span style="padding-left:10px; font-size:25px"><strong>More Games and Projects</strong></span>
+    <h1 style="font-size:25px;margin-top:5px" class="center">Baizho's Games and Projects</h1>
+    <div class="Flexrow center" style="gap:50px;">
+      <div class="Flexcol" style="height:100px">
+        <label for="shop">Shopping cart Project</label>
+        <a href="http://baizho.github.io/Shopping-list-web"><img  style="height:80px;" name="shop" alt="shopping list" src="./shop cart.png" /></a>
+      </div>
+      <div class="Flexcol">
+        <label for="shop">To-do list Project</label>
+        <a href="http://baizho.github.io/To_Do-list-web"><img  style="height:80px;" name="shop" alt="To-doList" src="./pencilpaper.jpg" /></a>
+      </div>
+      <div class="Flexcol">
+        <label for="shop">Tic_Tac_Toe Game/Project</label>
+        <a href="http://baizho.github.io/Tic_Tac_Toe-web"><img  style="height:80px;" name="shop" alt="Tictactoe" src="./ticboard.jpg" /></a>
+      </div>
+    </div>
+  </div>
+  <br><br>
   <h1 class="center"> To-do list</h1>
   <div id="container">
     <div id="left"></div>
