--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <div id="instruct" class="Flexcol center"style="background-color:white;position:absolute;width:100%;height:80%;">
+    <img style="width:40%;height:40%;" src="./WASD picture.jpg" />
+  </div>
   <div style="position:absolute">
     <i id="baricon" style="font-size:30px;" class="fa fa-bars"></i>
     <span style="font-size:25px; padding-left:10px;"><strong>More Games and Projects</strong></span>
@@ -22,17 +25,22 @@
     <div class="Flexrow center" style="gap:50px;">
       <div class="Flexcol" style="height:100px">
         <label for="shop">Shopping cart Project</label>
-        <a href="http://baizho.github.io/Shopping-list-web"><img  style="height:80px;" name="shop" alt="shopping list" src="./shop cart.png" /></a>
+        <a href="http://baizho.github.io/Shopping-list-web"><img  style="height:80px;" name="shop" alt="shopping list" src="./ProjImg/shop cart.png" /></a>
       </div>
       <div class="Flexcol">
         <label for="shop">To-do list Project</label>
-        <a href="http://baizho.github.io/To_Do-list-web"><img  style="height:80px;" name="shop" alt="To-doList" src="./pencilpaper.jpg" /></a>
+        <a href="http://baizho.github.io/To_Do-list-web"><img  style="height:80px;" name="shop"  alt="To-doList" src="./ProjImg/pencilpaper - Copy.jpg" /></a>
       </div>
       <div class="Flexcol">
         <label for="shop">Tic_Tac_Toe Game/Project</label>
-        <a href="http://baizho.github.io/Tic_Tac_Toe-web"><img  style="height:80px;" name="shop" alt="Tictactoe" src="./ticboard.jpg" /></a>
+        <a href="http://baizho.github.io/Tic_Tac_Toe-web"><img  style="height:80px;" name="shop" alt="Tictactoe" src="./ProjImg/ticboard - Copy.jpg" /></a>
+      </div>
+      <div class="Flexcol">
+        <label for="shop">Flying block Game/Project</label>
+        <a href="https://baizho.github.io/DontHitObsticlesSquare-web/"><img  style="height:80px;" name="shop" alt="Flying block" src="./ProjImg/RedsquareGame.png" /></a>
       </div>
     </div>
+
   </div>
   <br><br>
   <h1 class="center"> To-do list</h1>
