--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="Flexcol">
         <label for="shop">Tic_Tac_Toe Game/Project</label>
-        <a href="http://baizho.github.io/Tic_Tac_Toe-web"><img  style="height:80px;" name="shop" alt="Tictactoe" src="./ProjImg/ticboard - Copy.jpg" /></a>
+        <a href="http://baizho.github.io/Tic_Tac_Toe_2p-web"><img  style="height:80px;" name="shop" alt="Tictactoe" src="./ProjImg/ticboard - Copy.jpg" /></a>
       </div>
       <div class="Flexcol">
         <label for="shop">Flying block Game/Project</label>
